--- a/page.css
+++ b/page.css
@@ -15,7 +15,7 @@ body {
     .grid-container {
         display: grid;
         grid-template-columns: repeat (2, 1fr);
-        grid-template-rows: repeat (9, 1fr);
+        grid-template-rows: repeat (10, 1fr);
     }
 
     .instagram {
@@ -36,71 +36,76 @@ body {
         grid-row: 2 / 2;
     }
 
+    .text {
+        grid-column: 1 / -1;
+        grid-row: 3 / 3;
+    }
+
     .Fuji {
         grid-column: 1 / 1;
-        grid-row: 3 / 3;
+        grid-row: 4 / 4;    
     }
 
     .Uyuni {
         grid-column: 2 / -1;
-        grid-row: 3 / 3;
+        grid-row: 4 / 4;
     }
 
     .Muralla {
         grid-column: 1 / 1;
-        grid-row: 4 / 4;
+        grid-row: 5 / 5;
     }
 
     .Cataratas {
         grid-column: 2 / -1;
-        grid-row: 4 / 4;
+        grid-row: 5 / 5;
     }
 
     .Piramides {
         grid-column: 1 / 1;
-        grid-row: 5 / 5;
+        grid-row: 6 / 6;
     }
 
     .Pammukale {
         grid-column: 2 / -1;
-        grid-row: 5 / 5;
+        grid-row: 6 / 6;
     }
 
     .Gruta {
         grid-column: 1 / 1;
-        grid-row: 6 / 6;
+        grid-row: 7 / 7;
     }
 
     .Canyon {
         grid-column: 2 / -1;
-        grid-row: 6 / 6;
+        grid-row: 7 / 7;
     }
 
     .Palacio {
         grid-column: 1 / -1;
-        grid-row: 7 / 7;
+        grid-row: 8 / 8;
     }
 
     form {
         grid-column: 1 / 1;
-        grid-row: 8 / 8;
+        grid-row: 9 / 9;
     }
 
     footer {
         grid-column: 1 / -1;
-        grid-row: 9 / 9;
+        grid-row: 10 / 10;
     }
 
     footer > img {
         width: 20%;
-        animation-name: iberia;
+        animation-name: emirates;
         animation-duration: 1s;
         animation-timing-function: ease;
-        animation-iteration-count: infinite;
+        animation-iteration-count: 5;
         position: relative;
     }
     
-    @keyframes iberia {
+    @keyframes emirates {
         from {
             left: 0%;
             top: 0%;   
@@ -117,6 +122,7 @@ body {
     
     grid-template-areas: "header header header"
                          "menu menu menu"
+                         "text text text"
                          "Fuji Uyuni Muralla"
                          "Cataratas Pirámides Pammukale"
                          "Gruta Canyon Palacio";                    
@@ -130,7 +136,6 @@ body {
 
 .header {
     background-image: url(img/palms.jpg);
-    
     color: white;
     grid-area: header;
     font-size: 3rem;
@@ -159,6 +164,13 @@ body {
 .grid-container > section > a > .grid-img:hover {
     transition: all 1s ease;
     transform: rotateY(360deg);
+}
+
+.text {
+    grid-area: text;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: khaki;
+    border-radius: 1rem;
 }
 
 .grid-container > .Fuji {
@@ -235,8 +247,7 @@ fieldset legend{
 
 fieldset {
     width: 15%;
-    background-color: lightpink;
-    align-items: center;
+    background-color: lightpink;;
     padding: 1em;
     border-radius: 1rem;
     margin-top: 1em;
@@ -258,21 +269,21 @@ input[type="submit"] {
 }
 
 footer > img {
-        width: 20%;
-        animation-name: iberia;
-        animation-duration: 1s;
-        animation-timing-function: ease;
-        animation-iteration-count: infinite;
-        position: relative;
+    width: 20%;
+    animation-name: emirates;
+    animation-duration: 1s;
+    animation-timing-function: ease;
+    animation-iteration-count: 5;
+    position: relative;
+}
+
+@keyframes emirates {
+    from {
+        left: 0%;
+        top: 0%;   
     }
-    
-    @keyframes iberia {
-        from {
-            left: 0%;
-            top: 0%;   
-        }
-        to{
-            left: 80%;
-            top: 0%;
-        }
-    }  
+    to{
+        left: 80%;
+        top: 0%;
+    }
+}  
