--- a/page.css
+++ b/page.css
@@ -9,95 +9,146 @@ body {
     background-size: cover;
     background-position: center;
 }
-
-@media (max-width: 414px){
-
+    
     .grid-container {
         display: grid;
-        grid-template-columns: repeat (2, 1fr);
-        grid-template-rows: repeat (10, 1fr);
+        grid-template-columns: 1fr;
     }
 
     .instagram {
-        width: 9%;
+        width: 2rem;
     }
 
     .Twitter {
-        width: 14%;
+        width: 3.4rem;
+    }
+
+    .grid-container > .header > a > img:hover { /*Rotacion iconos */
+        transition: all 1s ease;
+        transform: rotateZ(360deg);
+    }
+
+    .grid-container > section { /*Centrado y espaciado header, menu y parrafo*/
+        text-align: center;
+        padding: 1rem;  
     }
 
     .header {
         grid-column: 1 / -1;
-        grid-row: 1 / 1;
+        background-image: url(img/palms.jpg);
+        color: white;
+        font-size: 3rem;
+        border-radius: 1rem;
     }
 
     .menu {
         grid-column: 1 / -1;
-        grid-row: 2 / 2;
+        display: flex;
+        background-color: lightgreen;
+        justify-content: space-around;
+        border-radius: 1rem;
     }
 
     .text {
         grid-column: 1 / -1;
-        grid-row: 3 / 3;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        background-color: khaki;
+        border-radius: 1rem;
+    }
+
+    .grid-container > article > section > h1 { /* Aplicacion de fuente a titulos de los lugares */
+        font-size: 1.5rem;
+        font-family: Garamond;
+    }
+    
+    .grid-container > article > section > a > .grid-img { /*Aplicacion de sombreado a img internas*/
+        border-radius: 20%;
+        box-shadow: 0px 10px 30px rgba(0, 0, 0, 20);
+    }
+    
+    .grid-container > article > section > a > .grid-img:hover { /*Aplicacion rotacion a img internas*/
+        transition: all 1s ease;
+        transform: rotateY(360deg);
+    }
+
+    article > section { /*Caracteristicas en comun de todas las imagenes internas*/
+        grid-column: auto / span 1;
+        background-position: center;
+        background-size: cover;
+        text-align: center;
+        padding: 1rem;
+        border-radius: 1rem;
     }
 
     .Fuji {
-        grid-column: 1 / 1;
-        grid-row: 4 / 4;    
+        background-image: url(img/montefuji.jpg);
     }
 
     .Uyuni {
-        grid-column: 2 / -1;
-        grid-row: 4 / 4;
+        background-image: url(img/uyuni.jpg);
     }
 
     .Muralla {
-        grid-column: 1 / 1;
-        grid-row: 5 / 5;
+        background-image: url(img/murallachina.jpg);
     }
 
     .Cataratas {
-        grid-column: 2 / -1;
-        grid-row: 5 / 5;
+        background-image: url(img/niagara.jpg);
     }
 
     .Piramides {
-        grid-column: 1 / 1;
-        grid-row: 6 / 6;
+        background-image: url(img/piramides.jpg);
     }
 
     .Pammukale {
-        grid-column: 2 / -1;
-        grid-row: 6 / 6;
+        background-image: url(img/pammukale.jpg);
     }
 
     .Gruta {
-        grid-column: 1 / 1;
-        grid-row: 7 / 7;
+        background-image: url(img/grutaazul.jpg);
+        color: blanchedalmond;
     }
 
     .Canyon {
-        grid-column: 2 / -1;
-        grid-row: 7 / 7;
+        background-image: url(img/cañon.jpg);
     }
 
     .Palacio {
-        grid-column: 1 / -1;
-        grid-row: 8 / 8;
+        background-image: url(img/tajmahal.jpg);
     }
 
-    form {
-        grid-column: 1 / 1;
-        grid-row: 9 / 9;
+    fieldset legend{
+        font-size: 1.5rem;
+        padding: .2rem;
+    }
+        
+    fieldset {
+        grid-column: 1 / -1;  
+        background-color: lightpink;
+        padding: 1em;
+        border-radius: 1rem;
+        margin-top: 1em;
+    }
+        
+    label {
+        display: block;
+        margin: .3rem;
+        margin-top: 1rem;
+    }
+        
+    input[type="submit"] {
+        float: inline-end;
+        background-color: lightskyblue;
+        margin-top: 1em;
+        padding: 1em;  
     }
 
     footer {
         grid-column: 1 / -1;
-        grid-row: 10 / 10;
     }
 
     footer > img {
-        width: 20%;
+        width: 10rem;
         animation-name: emirates;
         animation-duration: 1s;
         animation-timing-function: ease;
@@ -115,175 +166,25 @@ body {
             top: 0%;
         }
     }    
-}
 
-.grid-container {
-    display: grid;
+
+    @media (min-width: 414px) {
+        article {
+            display: grid;
+            grid-template-columns: 1fr 1fr; 
+        }
+
     
-    grid-template-areas: "header header header"
-                         "menu menu menu"
-                         "text text text"
-                         "Fuji Uyuni Muralla"
-                         "Cataratas Pirámides Pammukale"
-                         "Gruta Canyon Palacio";                    
-}
-
-.grid-container > section {
-    text-align: center;
-    padding: 1rem;
-    
-}
-
-.header {
-    background-image: url(img/palms.jpg);
-    color: white;
-    grid-area: header;
-    font-size: 3rem;
-    border-radius: 1rem;
-}
-
-.menu {
-    grid-area: menu;
-    display: flex;
-    flex-wrap: wrap;
-    background-color: lightgreen;
-    justify-content: space-around;
-    border-radius: 1rem;
-}
-
-.grid-container > section > h1 {
-    font-size: 1.5rem;
-    font-family: Garamond;
-}
-
-.grid-container > section > a > .grid-img {
-    border-radius: 20%;
-    box-shadow: 0px 10px 30px rgba(0, 0, 0, 20);
-}
-
-.grid-container > section > a > .grid-img:hover {
-    transition: all 1s ease;
-    transform: rotateY(360deg);
-}
-
-.text {
-    grid-area: text;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: khaki;
-    border-radius: 1rem;
-}
-
-.grid-container > .Fuji {
-    background-image: url(img/montefuji.jpg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 1rem;
-}
-
-.grid-container > .Uyuni {
-    background-image: url(img/uyuni.jpg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 1rem;
-}
-.grid-container > .Muralla {
-    background-image: url(img/murallachina.jpg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 1rem;
-}
-
-.grid-container > .Cataratas {
-    background-image: url(img/niagara.jpg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 1rem;
-}
-
-.grid-container > .Piramides {
-    background-image: url(img/piramides.jpg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 1rem;
-}
-
-.grid-container > .Pammukale {
-    background-image: url(img/pammukale.jpg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 1rem;
-}
-
-.grid-container > .Gruta {
-    background-image: url(img/grutaazul.jpg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 1rem;
-    color: blanchedalmond;
-}
-
-.grid-container > .Canyon {
-    background-image: url(img/cañon.jpg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 1rem;
-}
-
-.grid-container > .Palacio {
-    background-image: url(img/tajmahal.jpg);
-    background-position: center;
-    background-size: cover;
-    border-radius: 1rem;
-}
-
-.grid-container > .header > a > img:hover {
-    transition: all 1s ease;
-    transform: rotateZ(360deg);
-}
-
-fieldset legend{
-    font-size: 1.5rem;
-}
-
-fieldset {
-    width: 15%;
-    background-color: lightpink;;
-    padding: 1em;
-    border-radius: 1rem;
-    margin-top: 1em;
-}
-
-label {
-    display: block;
-    margin: 3%;
-    
-}
-
-input[type="submit"] {
-    float: inline-end;
-    background-color: lightskyblue;
-    margin-top: 1em;
-    padding: 1em;
-    width: 8em;
-    
-}
-
-footer > img {
-    width: 20%;
-    animation-name: emirates;
-    animation-duration: 1s;
-    animation-timing-function: ease;
-    animation-iteration-count: 5;
-    position: relative;
-}
-
-@keyframes emirates {
-    from {
-        left: 0%;
-        top: 0%;   
     }
-    to{
-        left: 80%;
-        top: 0%;
+
+    @media (min-width: 600px) {
+        article {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr; 
+        }
+
+    
     }
-}  
+
+
+
